--- a/resources/js/App.css
+++ b/resources/js/App.css
@@ -443,3 +443,20 @@ ul.tags li a:hover {
   border-radius:50%;
   font-size:12px;
 }
+
+.login-btn {
+    border-radius: 5px;
+    border: 1px solid #00ab6b;
+    padding: 5px 20px;
+    text-decoration-color: transparent;
+    text-decoration: none;
+}
+
+.login-btn:hover {
+    text-decoration: none;
+    color: #1C9963;
+}
+
+.logo {
+    color: #00ab6b;
+}
