--- a/resources/js/CSS/mediumish.css
+++ b/resources/js/CSS/mediumish.css
@@ -604,10 +604,15 @@ ul.tags li a:hover {
 
 .vote {
     /*position: fixed;*/
-    width: 100px;
-    height: 100px;
-    background-color: red;
-    position: relative;
+	position: fixed;
+    /*width: 100px;*/
+    /*height: 100px;*/
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+    background-color: #00000000;
+    /*position: relative;*/
     -webkit-animation-name: example; /* Safari 4.0 - 8.0 */
     -webkit-animation-duration: 4s; /* Safari 4.0 - 8.0 */
     animation-name: example;
@@ -638,6 +643,46 @@ ul.tags li a:hover {
 .votesample-appear.example-appear-active {
     opacity: 1;
     transition: opacity 5000ms ease-in;
+}
+
+.heart {
+	cursor: pointer;
+	height: 100px;
+	width: 100px;
+	background-image:url( 'https://abs.twimg.com/a/1446542199/img/t1/web_heart_animation.png');
+	background-position: left;
+	background-repeat:no-repeat;
+	background-size:2900%;
+}
+
+/*.heart:hover {*/
+	/*background-position:right;*/
+/*}*/
+
+.heart-fill {
+	cursor: pointer;
+	height: 100px;
+	width: 100px;
+	background-image:url( 'https://abs.twimg.com/a/1446542199/img/t1/web_heart_animation.png');
+	background-position: right;
+	background-repeat:no-repeat;
+	background-size:2900%;
+}
+
+.is-animating {
+	cursor: pointer;
+	height: 100px;
+	width: 100px;
+	background-image:url( 'https://abs.twimg.com/a/1446542199/img/t1/web_heart_animation.png');
+	background-position: left;
+	background-repeat:no-repeat;
+	background-size:2900%;
+	animation: heart-burst .8s steps(28) 1;
+}
+
+@keyframes heart-burst {
+	from {background-position:left;}
+	to { background-position:right;}
 }
 
 
