[Fix] Fix animation vote

--- a/resources/js/CSS/mediumish.css
+++ b/resources/js/CSS/mediumish.css
@@ -692,4 +692,8 @@ ul.tags li a:hover {
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
+.transparent-link {
+	border-width: 0;
+	color: transparent;
+}
 
